imgs added to index using css

--- a/index.html
+++ b/index.html
@@ -3,9 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="/style.css" rel="stylesheet" type="text/css">
+    <title>Segregacja śmieci</title>
 </head>
 <body>
-    
+    <div class="container-trash">
+        <div class="plastic"></div>
+        <div class="plastic1"></div>
+        <div class="plastic2"></div>
+        <div class="plastic3"></div>
+        <div class="plastic4"></div>
+        <div class="plastic5"></div>
+        <div class="paper"></div>
+        <div class="paper1"></div>
+        <div class="paper2"></div>
+        <div class="paper3"></div>
+        <div class="paper4"></div>
+        <div class="organic"></div>
+        <div class="organic1"></div>
+        <div class="organic2"></div>
+        <div class="organic3"></div>
+        <div class="organic4"></div>
+        <div class="organic5"></div>
+        <div class="organic6"></div>
+        <div class="organic7"></div>
+        <div class="metal"></div>
+        <div class="metal1"></div>
+        <div class="metal2"></div>
+        <div class="metal3"></div>
+        <div class="glass"></div>
+        <div class="glass1"></div>
+        <div class="glass2"></div>
+        <div class="glass3"></div>
+        <div class="ew"></div>
+        <div class="ew1"></div>
+        <div class="ew2"></div>
+        <div class="ew3"></div>
+    </div>
+    <div class="container-can">
+    <div class="pCan"></div>
+    <div class="prCan"></div>
+    <div class="oCan"></div>
+    <div class="mCan"></div>
+    <div class="gCan"></div>
+    <div class="eCan"></div>
+    </div>
+    <script src="/script.js"></script>
 </body>
 </html>
