script added to make possible to drag element

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container-trash">
-        <div class="plastic"></div>
+        <div class="plastic" id="plastic"></div>
         <div class="plastic1"></div>
         <div class="plastic2"></div>
         <div class="plastic3"></div>
