new logic added

--- a/index.html
+++ b/index.html
@@ -11,162 +11,189 @@
       <div
         class="plastic"
         id="plastic"
+        type="plastic"
         draggable="true"
         ondragstart="drag(event)"
       ></div>
       <div
         class="plastic1"
         id="plastic1"
+        type="plastic"
         draggable="true"
         ondragstart="drag(event)"
       ></div>
       <div
         class="plastic2"
         id="plastic2"
+        type="plastic"
         draggable="true"
         ondragstart="drag(event)"
       ></div>
       <div
         class="plastic3"
         id="plastic3"
+        type="plastic"
         draggable="true"
         ondragstart="drag(event)"
       ></div>
       <div
         class="plastic4"
         id="plastic4"
+        type="plastic"
         draggable="true"
         ondragstart="drag(event)"
       ></div>
       <div
         class="plastic5"
         id="plastic5"
+        type="plastic"
         draggable="true"
         ondragstart="drag(event)"
       ></div>
       <div
         class="paper"
         id="paper"
+        type="paper"
         draggable="true"
         ondragstart="drag(event)"
       ></div>
       <div
         class="paper1"
         id="paper1"
+        type="paper"
         draggable="true"
         ondragstart="drag(event)"
       ></div>
       <div
         class="paper2"
         id="paper2"
+        type="paper"
         draggable="true"
         ondragstart="drag(event)"
       ></div>
       <div
         class="paper3"
         id="paper3"
+        type="paper"
         draggable="true"
         ondragstart="drag(event)"
       ></div>
       <div
         class="paper4"
         id="paper4"
+        type="paper"
         draggable="true"
         ondragstart="drag(event)"
       ></div>
       <div
         class="organic"
         id="organic"
+        type="organic"
         draggable="true"
         ondragstart="drag(event)"
       ></div>
       <div
         class="organic1"
         id="organic1"
+        type="organic"
         draggable="true"
         ondragstart="drag(event)"
       ></div>
       <div
         class="organic2"
         id="organic2"
+        type="organic"
         draggable="true"
         ondragstart="drag(event)"
       ></div>
       <div
         class="organic3"
         id="organic3"
+        type="organic"
         draggable="true"
         ondragstart="drag(event)"
       ></div>
       <div
         class="organic4"
         id="organic4"
+        type="organic"
         draggable="true"
         ondragstart="drag(event)"
       ></div>
       <div
         class="organic5"
         id="organic5"
+        type="organic"
         draggable="true"
         ondragstart="drag(event)"
       ></div>
       <div
         class="organic6"
         id="organic6"
+        type="organic"
         draggable="true"
         ondragstart="drag(event)"
       ></div>
       <div
         class="organic7"
         id="organic7"
+        type="organic"
         draggable="true"
         ondragstart="drag(event)"
       ></div>
       <div
         class="metal"
         id="metal"
+        type="metal"
         draggable="true"
         ondragstart="drag(event)"
       ></div>
       <div
         class="metal1"
         id="metal1"
+        type="metal"
         draggable="true"
         ondragstart="drag(event)"
       ></div>
       <div
         class="metal2"
         id="metal2"
+        type="metal"
         draggable="true"
         ondragstart="drag(event)"
       ></div>
       <div
         class="metal3"
         id="metal3"
+        type="metal"
         draggable="true"
         ondragstart="drag(event)"
       ></div>
       <div
         class="glass"
         id="glass"
+        type="glass"
         draggable="true"
         ondragstart="drag(event)"
       ></div>
       <div
         class="glass1"
         id="glass1"
+        type="glass"
         draggable="true"
         ondragstart="drag(event)"
       ></div>
       <div
         class="glass2"
         id="glass2"
+        type="glass"
         draggable="true"
         ondragstart="drag(event)"
       ></div>
       <div
         class="glass3"
         id="glass3"
+        type="glass"
         draggable="true"
         ondragstart="drag(event)"
       ></div>
@@ -174,18 +201,21 @@
       <div
         class="ew1"
         id="ew1"
+        type="ew"
         draggable="true"
         ondragstart="drag(event)"
       ></div>
       <div
         class="ew2"
         id="ew2"
+        type="ew"
         draggable="true"
         ondragstart="drag(event)"
       ></div>
       <div
         class="ew3"
         id="ew3"
+        type="ew"
         draggable="true"
         ondragstart="drag(event)"
       ></div>
@@ -194,36 +224,42 @@
       <div
         class="pCan"
         id="pCan"
+        type="plastic"
         ondrop="drop(event)"
         ondragover="allowDrop(event)"
       ></div>
       <div
         class="prCan"
         id="prCan"
+        type="paper"
         ondrop="drop(event)"
         ondragover="allowDrop(event)"
       ></div>
       <div
         class="oCan"
         id="oCan"
+        type="organic"
         ondrop="drop(event)"
         ondragover="allowDrop(event)"
       ></div>
       <div
         class="mCan"
         id="mCan"
+        type="metal"
         ondrop="drop(event)"
         ondragover="allowDrop(event)"
       ></div>
       <div
         class="gCan"
         id="gCan"
+        type="glass"
         ondrop="drop(event)"
         ondragover="allowDrop(event)"
       ></div>
       <div
         class="eCan"
         id="eCan"
+        type="ew"
         ondrop="drop(event)"
         ondragover="allowDrop(event)"
       ></div>
